--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/recordrtc": "^5.6.14",
-    "recordrtc": "^5.6.2"
+    "recordrtc": "^5.6.2",
+    "tailwindcss": "^3.4.0"
   }
 }
